--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
 	"dependencies": {
 		"@popperjs/core": "2.11.6",
 		"graph-modal": "^1.0.7",
+		"graph-tabs": "^1.0.2",
 		"inputmask": "^5.0.9"
 	}
 }
