--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
 		"@popperjs/core": "2.11.6",
 		"graph-modal": "^1.0.7",
 		"graph-tabs": "^1.0.2",
-		"inputmask": "^5.0.9"
+		"inputmask": "^5.0.9",
+		"swiper": "^11.1.10"
 	}
 }
