--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
 		"webpack-stream": "latest"
 	},
 	"dependencies": {
+		"@fancyapps/ui": "^5.0.36",
 		"@popperjs/core": "2.11.6",
 		"graph-modal": "^1.0.7",
 		"graph-tabs": "^1.0.2",
